--- a/css/home_style.css
+++ b/css/home_style.css
@@ -1,37 +1,37 @@
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Regular.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Bold.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Italic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Italic.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-BoldItalic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-BoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Black.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Black.ttf") format("truetype");
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("/fonts/Lato-Regular.ttf") format("truetype");
+    src: url("../fonts/Lato-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
@@ -69,6 +69,7 @@ body {
     margin: 0;
     /*for elipses not overflowing*/
     /* overflow: hidden; */
+    overflow-x: hidden;
 }
 
 
@@ -76,7 +77,7 @@ body {
 
 .container {
     max-width: min(80%,300px);  
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
     margin: 0 auto;
     z-index: 10;
 }
@@ -85,7 +86,7 @@ body {
 @media screen and (min-width: 480px) {
     .container {
         max-width: 480px;
-        outline: 2px solid yellow;
+        /* outline: 2px solid yellow; */
         overflow: hidden;
 
     }
@@ -95,7 +96,7 @@ body {
     .container {
         /* width: min(80%,1280px); */
         max-width: 1280px;
-        outline: 2px solid green;
+        /* outline: 2px solid green; */
         overflow: hidden;
 
     }
