--- a/css/login.css
+++ b/css/login.css
@@ -1,37 +1,37 @@
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Regular.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Bold.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Italic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Italic.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-BoldItalic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-BoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Black.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Black.ttf") format("truetype");
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("/fonts/Lato-Regular.ttf") format("truetype");
+    src: url("../fonts/Lato-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
@@ -136,7 +136,7 @@ body {
 @media screen and (min-width: 780px) {
     .banner {
         flex-direction: row-reverse;
-        outline: 3px solid greenyellow;
+        /* outline: 3px solid greenyellow; */
 
     }
 }
