--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,37 @@
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Regular.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Bold.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Italic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Italic.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-BoldItalic.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-BoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
 @font-face {
     font-family: "Nunito";
-    src: url("/fonts/static/Nunito-Black.ttf") format("truetype");
+    src: url("../fonts/static/Nunito-Black.ttf") format("truetype");
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("/fonts/Lato-Regular.ttf") format("truetype");
+    src: url("../fonts/Lato-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
@@ -70,13 +70,14 @@ li {
 body {
     background-color: var(--background-color);
     font-family: "Nunito";
+    /* overflow: hidden; */
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 
 }
 
@@ -98,7 +99,7 @@ body {
     /* height: 100vh; */
     margin: 0 auto;
     padding-bottom: 2.5rem;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
     display: flex;
     flex-direction: column;
     /* gap: 5rem; */
@@ -108,7 +109,7 @@ body {
 @media screen and (min-width: 480px) {
     .container {
         max-width: 480px;
-        outline: 2px solid yellow;
+        /* outline: 2px solid yellow; */
     }
 }
 
@@ -121,7 +122,7 @@ body {
     flex-direction: column;
     justify-content: center;
     margin: 1rem;
-    outline: 1px solid green;
+    /* outline: 1px solid green; */
     height: 40vh;
     margin-bottom: 4rem;
     /* text-align: center; */
